--- a/ol_delivery_report/report/packing_slip_report.xml
+++ b/ol_delivery_report/report/packing_slip_report.xml
@@ -26,20 +26,24 @@
                     <div class="row mt-3">
                         <div class="col-6">
                             <div class="row">
-                                <div class="col-6">
-                                    <strong>Sale Order</strong>
-                                </div>
-                                <div class="col-6">
-                                    <strong><t t-out="doc.sale_id.name"/></strong>
-                                </div>
+                                <t t-if="doc.sale_id">
+                                    <div class="col-6">
+                                        <strong>Sale Order</strong>
+                                    </div>
+                                    <div class="col-6">
+                                        <strong><t t-out="doc.sale_id.name"/></strong>
+                                    </div>
+                                </t>
                             </div>
                             <div class="row">
-                                <div class="col-6">
-                                    <span>Order Date</span>
-                                </div>
-                                <div class="col-6">
-                                    <t t-out="doc.sale_id.date_order"/>
-                                </div>
+                                <t t-if="doc.sale_id">
+                                    <div class="col-6">
+                                        <span>Order Date</span>
+                                    </div>
+                                    <div class="col-6">
+                                        <t t-out="doc.sale_id.date_order"/>
+                                    </div>
+                                </t>
                             </div>
                             <div class="row">
                                 <div class="col-6">
@@ -51,12 +55,14 @@
                                 </div>
                             </div>
                             <div class="row">
-                                <div class="col-6">
-                                    <span>Customer PO:</span>
-                                </div>
-                                <div class="col-6">
-                                    <t t-out="doc.sale_id.client_order_ref"/>
-                                </div>
+                                <t t-if="doc.sale_id">
+                                    <div class="col-6">
+                                        <span>Customer PO:</span>
+                                    </div>
+                                    <div class="col-6">
+                                        <t t-out="doc.sale_id.client_order_ref"/>
+                                    </div>
+                                </t>
                             </div>
                         </div>
                         <div class="col-6">
@@ -140,6 +146,5 @@
                 </t>
             </t>
         </t>
-        <!-- </t> -->
     </template>
 </odoo>
