[IMP]mIMP Code.

--- a/ol_base/report/report_template.xml
+++ b/ol_base/report/report_template.xml
@@ -3,6 +3,7 @@
     <template id="basic_layout_onl" inherit_id="web.basic_layout">
         <xpath expr="//div[hasclass('article')]" position="after">
             <t t-set="company" t-value="o.company_id"/>
+            <t t-set="hide_footer" t-value="False" />
             <div t-if="company" class="footer o_standard_footer">
                 <div style="border-top: 1px solid black;">
                     <div class="row">
