--- a/ol_delivery_report/report/packing_slip_report.xml
+++ b/ol_delivery_report/report/packing_slip_report.xml
@@ -10,6 +10,15 @@
         <field name="paperformat_id" ref="ol_base.paperformat_onlogic"/>
     </record>
 
+    <!-- basic_layout_onl -->
+    <template id="basic_layout_inherit_blind_shipment" inherit_id="ol_base.basic_layout_onl">
+        <xpath expr="//div[hasclass('article')]" position="after">
+            <t t-if="o._name == 'stock.picking' and o.blind_drop_ship">
+                <t t-set="hide_footer" t-value="True" />
+            </t>
+        </xpath>
+    </template>
+
     <template id="report_packing_slip_template">
         <t t-call="web.html_container">
             <t t-foreach="docs" t-as="doc">
@@ -20,7 +29,8 @@
                             <h2><b>PACKING SLIP</b></h2>
                         </div>
                         <div class="col-2 text-end">
-                            <img t-if="doc.company_id.logo" t-att-src="image_data_uri(doc.company_id.logo)" style="max-height: 65px;" alt="Logo"/>
+                            <!-- invisible="doc.blind_drop_ship" -->
+                            <img t-if="doc.company_id.logo and not doc.blind_drop_ship" t-att-src="image_data_uri(doc.company_id.logo)" style="max-height: 65px;" alt="Logo"/>
                         </div>
                     </div>
                     <div class="row mt-3">
@@ -84,6 +94,29 @@
                             </div>
 
                         </div>
+                    </div>
+                    <div class="row mt-3">
+                        <div class="col-9">
+                            <div class="row">
+                                <strong>Sender Address</strong>
+                            </div>
+                            <div class="row">
+                                <span t-if="not doc.blind_drop_ship" t-field="doc.company_id.partner_id" t-options='{"widget": "contact", "fields": ["address", "name"], "no_marker": true}'/>
+
+                                <span t-if="doc.blind_drop_ship and doc.partner_id.parent_id" t-field="doc.partner_id.parent_id" t-options='{"widget": "contact", "fields": ["address", "name"], "no_marker": true}'/>
+
+                                <span t-if="doc.blind_drop_ship and not doc.partner_id.parent_id" t-field="doc.partner_id" t-options='{"widget": "contact", "fields": ["address", "name"], "no_marker": true}'/>
+                            </div>
+                        </div>
+                        <div class="col-3">
+                            <div class="row">
+                                <strong>Shipping Method</strong>
+                            </div>
+                            <div class="row">
+                                <span t-field="doc.carrier_id.name"/>
+                            </div>
+                        </div>
+                        
                     </div>
                     <div class="page mb32 mt32">
                         <!-- Outer Table for Stock Moves -->
