--- a/ol_delivery_report/report/packing_slip_report.xml
+++ b/ol_delivery_report/report/packing_slip_report.xml
@@ -10,20 +10,13 @@
         <field name="paperformat_id" ref="ol_base.paperformat_onlogic"/>
     </record>
 
-    <!-- basic_layout_onl -->
-    <template id="basic_layout_inherit_blind_shipment" inherit_id="ol_base.basic_layout_onl">
-        <xpath expr="//div[hasclass('article')]" position="after">
-            <t t-if="o._name == 'stock.picking' and o.blind_drop_ship">
-                <t t-set="hide_footer" t-value="True" />
-            </t>
-        </xpath>
-    </template>
-
     <template id="report_packing_slip_template">
         <t t-call="web.html_container">
             <t t-foreach="docs" t-as="doc">
+                <t t-set="partner" t-value="doc.partner_id or (doc.move_ids and doc.move_ids[0].partner_id) or False"/>
+                <!-- Set hide_footer based on blind_drop_ship condition -->
+                <t t-set="hide_footer" t-value="doc.blind_drop_ship"/>
                 <t t-call="web.basic_layout">
-                    <t t-set="partner" t-value="doc.partner_id or (doc.move_ids and doc.move_ids[0].partner_id) or False"/>
                     <div class="row">
                         <div class="col-10 mt-3 mb-5 text-muted">
                             <h2><b>PACKING SLIP</b></h2>
